# sprint_ai03

./: .gitattributes
AI 엔지니어 클래스/GIT 1/: hello.py
mission15/: README.md  research1_process.py
mission15/mission-result/: docker-compose.yml
mission15/mission-result/r1/: Dockerfile  train.py
mission15/mission-result/shared/: check_histo.ipynb  inference.ipynb  train_log.txt  train_report.json
mission15/mission-result/shared/.ipynb_checkpoints/: inference-checkpoint.ipynb  result-checkpoint.csv
mission16/: .gitignore  README.md  inference.py  modeling.ipynb  requirements.txt
mission16/models/: mission_16_mnist_cnn.onnx  mission_16_mnist_cnn.pth  mission_16_mnist_cnn_int8.pth
mission16/report/: inference_summary.csv  inference_summary.txt
mission17/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  ui.py
mission18/: .gitignore  README.md  pyproject.toml
mission18/backend/: app.py  db.py  models.py  requirements.txt  sentiment.py
mission18/frontend/: app.py
