[project]
name = "mission18"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "onnxruntime>=1.23.2",
    "onnxruntime-directml>=1.23.0",
    "optimum[onnxruntime]==1.27.0",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "sqlmodel>=0.0.27",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers==4.53.3",
    "uvicorn>=0.38.0",
    "vadersentiment>=3.3.2",
]
